--- a/css/reset.css
+++ b/css/reset.css
@@ -120,6 +120,7 @@ table {
 input,
 select,
 progress {
+    display: none;
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
