--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,10 @@
     cursor: pointer;
 }
 
+.header a:last-of-type {
+    margin-right: 0;
+}
+
 .header a:after {
     position: absolute;
     left: 0;
@@ -282,12 +286,8 @@
     cursor: pointer;
 }
 
-.work-list-click #checkbox:checked .work-list-click {
-    background: red;
-}
-
-.work-list-click #checkbox:checked ~ .work-inner {
-    background: rgba(255,255,255,0.2);
+.checkbox:checked + label .work-inner {
+    background: rgba(255,255,255,0.1);
 }
 
 .work-list-item:hover {
@@ -299,7 +299,7 @@
 
     flex: 3 1 100%;
 
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 300;
     line-height: 1.8;
     color: #FFEDDB;
@@ -345,6 +345,10 @@
     will-change: transform;
 }
 
+.expanded > img {
+    width: 100%;
+}
+
 .expanded span {
     padding: 1rem;
 
@@ -352,6 +356,7 @@
     align-items: center;
 
     font-size: 1.25rem;
+    line-height: 1.3;
     color: rgba(255,255,255,0.7);
 }
 
@@ -365,6 +370,7 @@
     padding: 1rem;
 
     display: flex;
+    align-items: center;
 
     font-size: 1.25rem;
     font-weight: 300;
@@ -379,14 +385,14 @@
     color: #4DB6AC;
 }
 
-.work-list-click #checkbox:checked ~ .expanded {
+.checkbox:checked ~ .expanded {
     max-height: 100rem;
 
     transform: none;
 }
 
 .work-detail {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.7;
     color: #999999;
@@ -465,7 +471,9 @@
 footer {
     position: relative;
 
-    min-height: 30rem;
+    z-index: -1;
+    min-height: 20rem;
+    overflow: hidden;
 }
 
 footer img {
@@ -525,4 +533,166 @@ footer img {
     100% {
         opacity: 0.4;
     }
+}
+
+.flickity-enabled {
+    position: relative;
+    margin-bottom: 2rem;
+
+    width: 100%;
+}
+
+.flickity-enabled:focus {
+    outline: none;
+}
+
+.flickity-viewport {
+    position: relative;
+
+    height: 100%;
+    overflow: hidden;
+}
+
+.flickity-slider {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+}
+
+/* draggable */
+
+.carousel img {
+    display: block;
+    height: 300px;
+}
+
+.flickity-enabled.is-draggable {
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+
+    -webkit-tap-highlight-color: transparent;
+            tap-highlight-color: transparent;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport {
+    cursor: move;
+    cursor: -webkit-grab;
+    cursor:         grab;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
+    cursor: -webkit-grabbing;
+    cursor:         grabbing;
+}
+
+/* ---- previous/next buttons ---- */
+
+.flickity-prev-next-button {
+    position: absolute;
+    top: 50%;
+    border: none;
+    border-radius: 50%;
+
+    width: 44px;
+    height: 44px;
+
+    cursor: pointer;
+
+    background: white;
+    background: hsla(0, 0%, 100%, 0.75);
+
+/* vertically center */
+
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+}
+
+.flickity-prev-next-button:hover {
+    background: white;
+}
+
+.flickity-prev-next-button:focus {
+    outline: none;
+
+    box-shadow: 0 0 0 5px #0099FF;
+}
+
+.flickity-prev-next-button:active {
+    opacity: 0.6;
+}
+
+.flickity-prev-next-button.previous {
+    left: 10px;
+}
+.flickity-prev-next-button.next {
+    right: 10px;
+}
+/* right to left */
+.flickity-rtl .flickity-prev-next-button.previous {
+    right: 10px;
+    left: auto;
+}
+.flickity-rtl .flickity-prev-next-button.next {
+    right: auto;
+    left: 10px;
+}
+
+.flickity-prev-next-button:disabled {
+    opacity: 0.3;
+
+    cursor: auto;
+}
+
+.flickity-prev-next-button svg {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+
+    width: 60%;
+    height: 60%;
+}
+
+.flickity-prev-next-button .arrow {
+    fill: #333333;
+}
+
+/* ---- page dots ---- */
+
+.flickity-page-dots {
+    position: absolute;
+    bottom: -27px;
+    padding: 0;
+    margin: 0;
+
+    width: 100%;
+
+    line-height: 1;
+    text-align: center;
+    list-style: none;
+}
+
+.flickity-rtl .flickity-page-dots {
+    direction: rtl;
+}
+
+.flickity-page-dots .dot {
+    padding: inherit;
+    margin: 0 8px;
+    border-radius: 50%;
+
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    opacity: 0.25;
+
+    cursor: pointer;
+
+    background: #FFFFFF;
+}
+
+.flickity-page-dots .dot.is-selected {
+    opacity: 1;
 }
