--- a/css/index.css
+++ b/css/index.css
@@ -329,7 +329,7 @@
 
 .expanded {
     border-top: 1px solid rgba(255,255,255,0.5);
-
+    cursor: auto;
     display: flex;
     width: 100%;
     max-height: 0;
