--- a/css/index_801.css
+++ b/css/index_801.css
@@ -1,89 +1,86 @@
 .atf {
-    min-height: 92.5vh;
+  min-height: 92.5vh;
 }
 
 .header {
-    padding: 1.5rem;
+  padding: 1.5rem;
 }
 
 .header a {
-    padding: 0 1rem;
-    margin: 0 1rem;
+  padding: 0 1rem;
+  margin: 0 1rem;
 }
 
 .parallax-img:nth-of-type(4) {
-    bottom: -30px;
+  bottom: -30px;
 }
 .parallax-img:nth-of-type(3) {
-    bottom: -50px;
+  bottom: -50px;
 }
 .parallax-img:nth-of-type(2) {
-    bottom: -45px;
+  bottom: -45px;
 }
 .parallax-img:nth-of-type(1) {
-    bottom: -50px;
+  bottom: -50px;
 }
 
 .welcome > div {
-    margin-left: -90px;
+  margin-left: -90px;
 
-    flex-direction: row;
+  flex-direction: row;
 }
 .welcome h1 {
-    right: 0;
+  right: 0;
 }
 .welcome > div span:nth-of-type(2) {
-    margin: 0 1.5rem;
+  margin: 0 1.5rem;
 }
 
 .about {
-    flex-direction: row;
+  flex-direction: row;
 }
 
 .about img {
-    margin-right: -60px;
-    border: 15px solid #131131;
+  margin-right: -60px;
+  border: 15px solid #131131;
 }
 
 .card {
-    background: rgba(255,255,255,0.1);
+  background: rgba(255, 255, 255, 0.1);
 }
 .card p {
-    padding: 20px 20px 20px 5rem;
+  padding: 20px 20px 20px 5rem;
 }
 
 .work-role {
-    flex: 1 1 60%;
+  flex: 1 1 60%;
 }
 
 .work-company {
-    flex: 1 1 20%;
+  flex: 1 1 20%;
 }
 
 .work-date {
-    flex: 1 1 20%;
-    align-self: flex-end;
+  flex: 1 1 20%;
+  align-self: flex-end;
 
-    text-align: right;
+  text-align: right;
 }
 
 footer {
-    min-height: 30rem;
+  min-height: 30rem;
 }
 
 footer img {
-    bottom: -60px;
+  bottom: -60px;
 }
-
 
 .carousel img {
-    display: block;
-    height: 800px;
+  display: block;
+  height: 800px;
 }
 
-
-
 @media (max-width: 900px) {
-    .about {
-    }
+  .about {
+  }
 }
