--- a/css/index.css
+++ b/css/index.css
@@ -110,7 +110,9 @@
 
 .welcome {
   position: relative;
-
+  /* padding-top: 10vh; */
+  padding-left: 1rem;
+  padding-right: 1rem;
   z-index: 10;
   display: flex;
   height: 70vh;
@@ -136,13 +138,13 @@
   flex-direction: column;
   margin-top: -6rem;
   font-size: 4rem;
-  text-align: center;
+  text-align: left;
 }
 
 .welcome h1 {
   position: absolute;
   right: 55px;
-  bottom: -40px;
+  bottom: -90px;
 
   opacity: 0;
 
@@ -155,7 +157,7 @@
 
 .welcome span:nth-of-type(1) {
   opacity: 0;
-
+  font-size: 3rem;
   animation: fade-up 0.75s 0.25s cubic-bezier(0, 0, 0.2, 1) forwards,
     fade-out 0.5s 2s cubic-bezier(0, 0, 0.2, 1) forwards;
 }
@@ -169,7 +171,7 @@
 
 .welcome div span:nth-of-type(2) {
   opacity: 0;
-
+  font-size: 3rem;
   animation: fade-up 0.75s 3.3s cubic-bezier(0, 0, 0.2, 1) forwards;
 }
 
