--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,10 @@
   animation: fade-up 0.75s 5s cubic-bezier(0, 0, 0.2, 1) forwards;
 }
 
+.flickity-viewport {
+  transition: height 0.2s;
+}
+
 .welcome span:nth-of-type(1) {
   opacity: 0;
   font-size: 3rem;
